<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >



    <EditText
        android:id="@+id/titleIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bookTitle" />

    <EditText
        android:id="@+id/authorIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bookAuthor" />

    <EditText
        android:id="@+id/isbnIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bookIsbn" />

    <EditText
        android:id="@+id/rateIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bookRate" />




    <Button
        android:id="@+id/okydokie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okayButton" />

</LinearLayout>