<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/pickupdateinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pickupdatetext"/>
    <EditText
        android:id="@+id/pickuptimeinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pickuptimetext"/>

    <EditText
        android:id="@+id/returndateinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/returndatetext"/>
    <EditText
        android:id="@+id/returntimeinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/returntimetext"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usernameInput" />

    <EditText
        android:id="@+id/pwdInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pwdInput" />

    <Spinner
        android:layout_marginLeft="4dp"
        android:id="@+id/bookspinner"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Hold"
        android:id="@+id/mPlaceHoldButton"/>
</LinearLayout>

