<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/mCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mCreateButton" />

    <Button
        android:id="@+id/mPlaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mPlaceButton" />

    <Button
        android:id="@+id/mCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mCancelButton" />

    <Button
        android:id="@+id/mManageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mManageButton" />


</LinearLayout>
