<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/adIdInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/adUn" />

    <EditText
        android:id="@+id/adPwInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/adPw" />


    <Button
        android:id="@+id/mAdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adLog" />

</LinearLayout>